postcss/testData/inspections/nesting/nestedRulesetInsideNestAtRule.pcss
h1 {
  @nest a & {
    <error descr="Nested ruleset selector should start with '&'">div</error> {

    }
  }
}